# sam3_in_trt

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test_infer.yml  test_installdeps.yml
configs/: sam2_trt.yaml  sam3_trt.yaml
docker/: Dockerfile.dgx  Dockerfile.homedesk
python/text_tokenizer/: __init__.py  tokenizer_ve.py
scripts/: build_trt_engine.py  download_checkpoint.py  export_onnx.py  export_trt.sh  infer_pytorch.py  infer_trt.py
