[project]
name = "sam3-in-trt"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<2",
    "opencv-python>=4.8",
    "pycuda",
    "ftfy",
    "regex",
    "iopath",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/text_tokenizer"]

[tool.uv]
package = true
